@@ -4554,68 +4554,68 @@ GdbServer::regAddr (unsigned int  regnum) const
 {
   static const uint32_t regs [NUM_REGS] = {
     TargetControl::R0,
-    TargetControl::R0 +  1,
-    TargetControl::R0 +  2,
-    TargetControl::R0 +  3,
-    TargetControl::R0 +  4,
-    TargetControl::R0 +  5,
-    TargetControl::R0 +  6,
-    TargetControl::R0 +  7,
-    TargetControl::R0 +  8,
-    TargetControl::R0 +  9,
-    TargetControl::R0 + 10,
-    TargetControl::R0 + 11,
-    TargetControl::R0 + 12,
-    TargetControl::R0 + 13,
-    TargetControl::R0 + 14,
-    TargetControl::R0 + 15,
-    TargetControl::R0 + 16,
-    TargetControl::R0 + 17,
-    TargetControl::R0 + 18,
-    TargetControl::R0 + 19,
-    TargetControl::R0 + 20,
-    TargetControl::R0 + 21,
-    TargetControl::R0 + 22,
-    TargetControl::R0 + 23,
-    TargetControl::R0 + 24,
-    TargetControl::R0 + 25,
-    TargetControl::R0 + 26,
-    TargetControl::R0 + 27,
-    TargetControl::R0 + 28,
-    TargetControl::R0 + 29,
-    TargetControl::R0 + 30,
-    TargetControl::R0 + 31,
-    TargetControl::R0 + 32,
-    TargetControl::R0 + 33,
-    TargetControl::R0 + 34,
-    TargetControl::R0 + 35,
-    TargetControl::R0 + 36,
-    TargetControl::R0 + 37,
-    TargetControl::R0 + 38,
-    TargetControl::R0 + 39,
-    TargetControl::R0 + 40,
-    TargetControl::R0 + 41,
-    TargetControl::R0 + 42,
-    TargetControl::R0 + 43,
-    TargetControl::R0 + 44,
-    TargetControl::R0 + 45,
-    TargetControl::R0 + 46,
-    TargetControl::R0 + 47,
-    TargetControl::R0 + 48,
-    TargetControl::R0 + 49,
-    TargetControl::R0 + 50,
-    TargetControl::R0 + 51,
-    TargetControl::R0 + 52,
-    TargetControl::R0 + 53,
-    TargetControl::R0 + 54,
-    TargetControl::R0 + 55,
-    TargetControl::R0 + 56,
-    TargetControl::R0 + 57,
-    TargetControl::R0 + 58,
-    TargetControl::R0 + 59,
-    TargetControl::R0 + 60,
-    TargetControl::R0 + 61,
-    TargetControl::R0 + 62,
+    TargetControl::R0 +   4,
+    TargetControl::R0 +   8,
+    TargetControl::R0 +  12,
+    TargetControl::R0 +  16,
+    TargetControl::R0 +  20,
+    TargetControl::R0 +  24,
+    TargetControl::R0 +  28,
+    TargetControl::R0 +  32,
+    TargetControl::R0 +  36,
+    TargetControl::R0 +  40,
+    TargetControl::R0 +  44,
+    TargetControl::R0 +  48,
+    TargetControl::R0 +  52,
+    TargetControl::R0 +  56,
+    TargetControl::R0 +  60,
+    TargetControl::R0 +  64,
+    TargetControl::R0 +  68,
+    TargetControl::R0 +  72,
+    TargetControl::R0 +  76,
+    TargetControl::R0 +  80,
+    TargetControl::R0 +  84,
+    TargetControl::R0 +  88,
+    TargetControl::R0 +  92,
+    TargetControl::R0 +  96,
+    TargetControl::R0 + 100,
+    TargetControl::R0 + 104,
+    TargetControl::R0 + 108,
+    TargetControl::R0 + 112,
+    TargetControl::R0 + 116,
+    TargetControl::R0 + 120,
+    TargetControl::R0 + 124,
+    TargetControl::R0 + 128,
+    TargetControl::R0 + 132,
+    TargetControl::R0 + 136,
+    TargetControl::R0 + 140,
+    TargetControl::R0 + 144,
+    TargetControl::R0 + 148,
+    TargetControl::R0 + 152,
+    TargetControl::R0 + 156,
+    TargetControl::R0 + 160,
+    TargetControl::R0 + 164,
+    TargetControl::R0 + 168,
+    TargetControl::R0 + 172,
+    TargetControl::R0 + 176,
+    TargetControl::R0 + 180,
+    TargetControl::R0 + 184,
+    TargetControl::R0 + 188,
+    TargetControl::R0 + 192,
+    TargetControl::R0 + 196,
+    TargetControl::R0 + 100,
+    TargetControl::R0 + 104,
+    TargetControl::R0 + 108,
+    TargetControl::R0 + 112,
+    TargetControl::R0 + 116,
+    TargetControl::R0 + 120,
+    TargetControl::R0 + 124,
+    TargetControl::R0 + 128,
+    TargetControl::R0 + 132,
+    TargetControl::R0 + 136,
+    TargetControl::R0 + 140,
+    TargetControl::R0 + 144,
+    TargetControl::R0 + 148,
     TargetControl::R63,
     TargetControl::CONFIG,
     TargetControl::STATUS,
